Add sponsors page, and small edits

--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "dev:server": "live-server src --port=8080 --browser=CHROME",
     "============BUILD SETUP": "============",
     "build": "npm-run-all prod:*",
-    "prod:setup": "mkdirp dist/assets/css dist/assets/img dist/assets/js",
-    "prod:pages": "mkdirp dist/downloads dist/examples dist/faq",
+    "prod:setup": "mkdirp dist/assets/css dist/assets/img dist/assets/img/sponsors dist/assets/js",
+    "prod:pages": "mkdirp dist/downloads dist/examples dist/faq dist/our-sponsors",
+    "prod:other": "mkdirp dist/data",
     "============COPY TO DIST": "============",
     "prod:copy-images": "copy src\\assets\\img\\* dist\\assets\\img\\",
+    "prod:copy-images-sponsors": "copy src\\assets\\img\\sponsors\\* dist\\assets\\img\\sponsors",
     "prod:copy-downloads": "copy src\\downloads\\* dist\\downloads\\",
     "prod:copy-home": "copy src\\index.html dist\\index.html",
     "prod:copy-faq": "copy src\\faq\\index.html dist\\faq\\index.html",
     "prod:copy-examples": "copy src\\examples\\index.html dist\\examples\\index.html",
+    "prod:copy-sponsors": "copy src\\our-sponsors\\index.html dist\\our-sponsors\\index.html",
     "prod:copy-css": "type src\\assets\\css\\bootstrap\\bootstrap.css src\\assets\\css\\custom.css > dist\\assets\\css\\styles.css",
+    "prod:copy-data": "copy src\\data\\* dist\\data\\",
     "============PROCESS CSS": "============",
     "prod:css-prefix": "postcss dist\\assets\\css\\styles.css -u autoprefixer -b \">1% in US, ie>=10\" -o dist\\assets\\css\\styles.css",
     "prod:css-clean": "cleancss -o dist\\assets\\css\\styles.css dist\\assets\\css\\styles.css",
