--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "KLRN Corporate Support Microsite",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {  
+  
     "============DEV SETUP - npm start": "============",
     "start": "npm-run-all dev:*",
     "dev:concat-js": "browserify src/assets/js/libs/get-load.js > src/assets/js/libs/load.js",
@@ -12,7 +13,7 @@
     "============BUILD SETUP - npm run build": "============",
     "build": "npm-run-all prod:*",
     "prod:setup": "mkdirp dist/assets/css dist/assets/img dist/assets/img/sponsors dist/assets/js dist/assets/js/plugins",
-    "prod:pages": "mkdirp dist/downloads dist/examples dist/faq dist/our-sponsors",
+    "prod:pages": "mkdirp dist/downloads dist/examples dist/faq dist/our-sponsors dist/sponsor-levels",
     "prod:other": "mkdirp dist/data dist/includes",
 	
     "============COPY TO DIST": "============",
@@ -23,6 +24,7 @@
     "prod:copy-faq": "copy src\\faq\\index.html dist\\faq\\index.html",
     "prod:copy-examples": "copy src\\examples\\index.html dist\\examples\\index.html",
     "prod:copy-sponsors": "copy src\\our-sponsors\\index.html dist\\our-sponsors\\index.html",
+	"prod:copy-sponsor-levels": "copy src\\sponsor-levels\\index.html dist\\sponsor-levels\\index.html",
 	"prod:copy-header": "copy src\\includes\\header.html dist\\includes\\header.html",
 	"prod:copy-footer": "copy src\\includes\\footer.html dist\\includes\\footer.html",
     "prod:copy-css": "type src\\assets\\css\\bootstrap\\bootstrap.css src\\assets\\css\\custom.css > dist\\assets\\css\\styles.css",	
@@ -39,6 +41,7 @@
     "prod:server": "live-server dist --port=8088 --browser=CHROME",
     "test": "echo \"No test specified\" && npm run lint && exit 0",
     "lint": "jshint src/assets/js/custom.js || exit 0"
+	
   },
   "author": "KLRN",
   "license": "MIT",
